# api_client_framework

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-docs.yml
advanced/base-url/: index.html
advanced/data-parsers/: index.html
advanced/exception-handlers/: index.html
advanced/logging/: index.html
api_consumer/: api.py  api_mixins.py  decorators.py  endpoints.py  httpverb.py  methods.py  models.py  protocols.py  requests_utils.py  utils.py
docs/: index.md
docs/advanced/: base-url.md  data-parsers.md  exception-handlers.md  index.md  logging.md
docs/getting-started/: create-client.md  describe-endpoints.md
examples/random_data_api/: client.py  endpoints.py  models.py
examples/random_post_api/: client.py  endpoints.py  models.py
getting-started/create-client/: index.html
getting-started/describe-endpoints/: index.html
src/api_client_framework/: methods.py  parsers.py  protocols.py  requests.py
src/api_consumer/: parsers.py  requests.py
