[tool.poetry]
name = "api_client_framework"
version = "0.1.0"
description = "Class-based helper for constructing API clients"
authors = ["EnriqueSoria <me@enriquesoria.es>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/EnriqueSoria/api_client_framework"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.31"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
